<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_side_menu"
        android:title="@string/home"
        android:enabled="true"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_side_menu"
        android:title="@string/notification"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_add_post"
        android:icon="@drawable/add_course_menu"
        android:title="@string/new_post"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_side_menu"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_side_menu"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

</menu>