<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_400dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            tools:src="@tools:sample/avatars"
            tools:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/tv_title"
            style="@android:style/Widget.Material.Light.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:bufferType="normal"
            android:gravity="center_vertical"
            android:hint="@string/row_title"
            android:outlineProvider="none"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="@+id/iv_img"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/iv_img"
            app:layout_constraintTop_toBottomOf="@+id/iv_img" />


        <TextView
            android:id="@+id/tv_institution_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:drawableStart="@drawable/ic_person_details"
            android:drawablePadding="@dimen/margin_16dp"
            android:ems="10"
            android:textSize="@dimen/text_14"
            android:gravity="center_vertical"
            android:hint="@string/institution_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_view_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:drawableStart="@drawable/ic_event_available_black_24dp"
            android:drawablePadding="@dimen/margin_16dp"
            android:textSize="@dimen/text_14"
            android:hint="@string/date"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="@+id/tv_institution_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_institution_name" />

        <TextView
            android:id="@+id/tv_view_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:drawableStart="@drawable/time_black_icon"
            android:drawablePadding="@dimen/margin_16dp"
            android:textSize="@dimen/text_14"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:hint="@string/time"
            app:layout_constraintStart_toStartOf="@+id/tv_view_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_view_date" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/more_details"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_16"
            app:layout_constraintStart_toStartOf="@+id/tv_price"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />


        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:drawableStart="@drawable/ic_attach_money"
            android:drawablePadding="@dimen/margin_16dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_14"
            android:textColor="@color/black"
            android:hint="@string/price"
            app:layout_constraintStart_toStartOf="@+id/tv_view_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_view_time" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="@+id/tv_price"
            app:layout_constraintStart_toEndOf="@+id/tv_price"
            app:layout_constraintTop_toTopOf="@+id/tv_price" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:background="#9E9E9E"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


        <RelativeLayout
            android:id="@+id/rl_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/text_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2">


            <Button
                android:id="@+id/btn_view_phone"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="@dimen/size_100dp"
                android:layout_marginStart="@dimen/text_16"
                android:background="@drawable/buttonshape"
                android:drawableTop="@drawable/ic_phone_profile"
                android:drawablePadding="@dimen/margin_8dp"
                android:ems="10"
                android:text="@string/phone" />

            <Button
                android:id="@+id/btn_view_email"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="@dimen/size_100dp"
                android:layout_marginStart="@dimen/text_16"
                android:background="@drawable/buttonshape"
                android:clickable="true"
                android:drawableTop="@drawable/ic_email_profile"
                android:drawablePadding="@dimen/margin_8dp"
                android:layout_toEndOf="@id/btn_view_phone"
                android:ems="10"
                android:text="@string/email" />

            <Button
                android:id="@+id/btn_view_location"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="@dimen/size_100dp"
                android:layout_marginStart="@dimen/text_16"
                android:layout_marginTop="@dimen/text_16"
                android:background="@drawable/buttonshape"
                android:clickable="true"
                android:drawableTop="@drawable/display_location"
                android:drawablePadding="@dimen/margin_8dp"
                android:ems="10"
                android:layout_below="@id/btn_view_phone"
                android:text="@string/location" />

            <Button
                android:id="@+id/btn_view_offer"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="@dimen/size_100dp"
                android:layout_marginStart="@dimen/text_16"
                android:layout_marginEnd="@dimen/text_16"
                android:layout_marginTop="@dimen/text_16"
                android:background="@drawable/buttonshape"
                android:clickable="true"
                android:drawableTop="@drawable/ic_local_offer"
                android:drawablePadding="@dimen/margin_8dp"
                android:ems="10"
                android:layout_toEndOf="@id/btn_view_location"
                android:layout_below="@id/btn_view_email"
                android:text="@string/offer" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_join"
            android:layout_width="@dimen/size_300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:background="@drawable/text_shapes"
            android:clickable="true"
            android:text="@string/request_to_join"
            android:textAllCaps="false"
            android:textColor="@color/buttonBGColorDisabled"
            android:textSize="@dimen/text_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_details" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>