<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.dialog.OfferDialogFragment">


    <Button
        android:id="@+id/btn_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_16"
        android:layout_marginEnd="@dimen/text_16"
        android:background="@android:color/transparent"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:typeface="serif"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_final_payment" />

    <TextView
        android:id="@+id/tv_offer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:hint="@string/offer_Type"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_18"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toEndOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_16"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/tv_details_offer"
        app:layout_constraintStart_toStartOf="@+id/tv_offer_title"
        app:layout_constraintTop_toTopOf="@+id/tv_details_offer" />

    <TextView
        android:id="@+id/tv_final_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_16"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/tv_final_payment"
        app:layout_constraintStart_toStartOf="@+id/tv_offer"
        app:layout_constraintTop_toTopOf="@+id/tv_final_payment" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/text_18"
        android:textColor="@color/black"
        android:text="@string/offer_Type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_details_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/text_18"
        android:textColor="@color/black"
        android:text="@string/offer_Details"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_final_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/text_18"
        android:textColor="@color/black"
        android:text="@string/final_payment"
        app:layout_constraintStart_toStartOf="@+id/tv_details_offer"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_offer" />


    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/percentage"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18"
        app:layout_constraintBottom_toBottomOf="@+id/tv_offer"
        app:layout_constraintStart_toEndOf="@+id/tv_offer"
        app:layout_constraintTop_toTopOf="@+id/tv_offer" />

    <TextView
        android:id="@+id/tv_omr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18"
        app:layout_constraintBottom_toBottomOf="@+id/tv_final_price"
        app:layout_constraintStart_toEndOf="@+id/tv_final_price"
        app:layout_constraintTop_toTopOf="@+id/tv_final_price" />

</androidx.constraintlayout.widget.ConstraintLayout>