<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_user_name_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/user_name"
        android:textSize="@dimen/text_14"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_date_notification"
        app:layout_constraintStart_toEndOf="@+id/img_user_image_notification"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_msg_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:text="@string/message"
        android:textColor="@color/message_color"
        android:textSize="@dimen/text_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name_notification"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_notification" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user_image_notification"
        android:layout_width="@dimen/ci_profile_pic_size"
        android:layout_height="@dimen/ci_profile_pic_size"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:src="@drawable/ic_person"
        app:civ_border_color="@color/bubble_gum_pink"
        app:civ_border_width="@dimen/border_1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:text="@string/row_date"
        android:textSize="@dimen/text_12"
        android:textColorHint="@color/date_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_payment_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:text="@string/payment_link"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_msg_notification"
        app:layout_constraintStart_toStartOf="@+id/tv_msg_notification"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg_notification" />

</androidx.constraintlayout.widget.ConstraintLayout>